fixed header spacing

--- a/sass/components/navigation/_navigation.scss
+++ b/sass/components/navigation/_navigation.scss
@@ -251,7 +251,7 @@ a.focus {
 
 	.main-navigation .menu-menu-1-container .menu {
 		position: absolute;
-		top: 0;
+		top: 1.75rem;
 		right: 0;
 		z-index: 30000;
 		width: fit-content;
